Fixed layout issue

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,7 +46,7 @@ header, .page {
       line-height: 30px;
       &.headline {
         line-height: 30px;
-        max-width: 960px;
+        max-width: 965px;
       }
     }
     .module {
